# ChronoXtract

./: .gitignore  CARMA_IMPLEMENTATION_SUMMARY.md  CARMA_MCMC_ANALYSIS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_SUMMARY.md  TODO.md  baseline_benchmark.txt  benchmark_carma.py  carma_benchmark.py  debug_ar_roots.py  debug_mcmc.py  debug_mcmc_detailed.py  demo_new_features.py  optimized_benchmark.txt  pyproject.toml  test_carma_basic.py  test_carma_comprehensive.py  test_carma_simple.py  test_carma_validation.py
.github/: copilot-instructions.md
benches/: carma_benchmark.rs
benchmarks/: timing_comparison.py
docs/: CARMA.md  CARMA_MODULE.md  api_reference.md  carma_documentation.md  carma_status.py  user_guide.md
docs/examples/: README.md  advanced_features.py  basic_statistics.py  examples.ipynb  examples2.ipynb  examples2.tex  frequency_analysis.py  rolling_statistics.py  topology_analysis.py
latex_documentation/: main.aux  main.out  main.toc
src/: lib.rs
test_env/: pyvenv.cfg
tests/: README.md  benchmark_new_carma.py  carma.py  run_carma_tests.py  test_carma_basic.py  test_carma_benchmark.py  test_carma_comprehensive.py  test_carma_comprehensive_comparison.py  test_carma_mcmc.py  test_carma_performance.py  test_carma_validated.py  test_carma_validation.py  test_correlation.py  test_entropy.py  test_fda.py  test_higherorder.py  test_matrices.py  test_mcmc_final.py  test_mcmc_fix_validation.py  test_mcmc_quick.py  test_misc.py  test_new_carma.py  test_rolling_stats.py  test_seasonality.py  test_shape.py  test_stats.py  test_topology.py
(+47 files in other folders)
