[package]
name = "chronoxtract"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chronoxtract"
crate-type = ["cdylib"]

[dependencies]
rustfft = "6.2.0"  # use the version compatible with your project

[dependencies.pyo3]
version = "0.23.3"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]