[package]
name = "chronoxtract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chronoxtract"
crate-type = ["cdylib"]

[dependencies]
rustfft = "6.2.0"
once_cell = "1.17.1"
numpy = "0.20"
itertools = "0.10.5"
rand = "0.8.5"
rand_distr = "0.4.3"

[dependencies.pyo3]
version = "0.20"
features = ["abi3-py38"]
