[package]
name = "chronoxtract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chronoxtract"
crate-type = ["cdylib"]

[dependencies]
rustfft = "6.2.0"
once_cell = "1.17.1"
numpy = "0.20"
itertools = "0.10.5"
rand = "0.8.5"
rand_distr = "0.4.3"
nalgebra = "0.32"
argmin = "0.9"
thiserror = "1.0"
num-complex = "0.4"
rayon = "1.11"
statrs = "0.17"

[dependencies.pyo3]
version = "0.20"
features = ["abi3-py38"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

